fixed the extra space of bullet points

--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -106,7 +106,7 @@
 
 .richText {
     /* border: 2px solid red; */
-    width: 100%;
+    width: 93%;
 }
 .richText ul {
     /* border: 2px solid blue; */
